# synapse-operator

./: .gitignore  .licenserc.yaml  .trivyignore  .woke.yaml  .wokeignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  actions.yaml  buse_report_location.conf  charmcraft.yaml  config.yaml  homeserver.yaml  localstack-installation.sh  main_location.conf  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  test_media_file.txt  tox.ini  trivy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement_proposal.yml  matrix_bug_report.yml  matrix_enhancement.yml
.github/workflows/: check_for_new_releases.yaml  integration_test.yaml  integration_test_s3.yaml  integration_test_with_secrets.yaml  promote_charm.yaml  publish_charm.yaml  publish_feature.yaml  test.yaml  test_and_publish_charm.yaml
configurators/synapse-main-configurator/: README.md  config.yaml  metadata.yaml
docs/: index.md
docs/explanation/: charm-architecture.md  mas.plantuml  moderation-and-spam-control.md
docs/how-to/: backup-and-restore.md  backup.md  configure-smtp.md  contribute.md  horizontally-scale.md
docs/reference/: actions.md  configurations.md  external-access.md  integrations.md
docs/tutorial/: getting-started.md
mjolnir_rock/: rockcraft.yaml
mjolnir_snap/: snapcraft.yaml
nginx_rock/: rockcraft.yaml
nginx_rock/etc/: abuse_report_location.conf.j2  abuse_report_location.conf.template  main_location.conf  main_location.conf.template  nginx.conf  worker_location.conf
src/: .observability.py.swp  admin_access_token.py  backup.py  backup_observer.py  charm.py  charm_state.py  charm_types.py  config.py  constants.py  database.py  database_client.py  database_observer.py  exceptions.py  irc_bridge.py  matrix_auth_observer.py  media_observer.py  mjolnir.py  observability.py  pebble.py  plugins.py  redis_observer.py  s3_parameters.py  saml_observer.py  secret_storage.py  smtp_observer.py  synapse.py  synapse_api.py  user.py
src-docs/: admin.md  admin_access_token.py.md  api.md  backup.py.md  backup_observer.py.md  change_user_admin.md  charm.py.md  charm_state.py.md  charm_types.py.md  constants.py.md  database_client.py.md  database_observer.py.md  exceptions.py.md  flycheck_backup.py.md  irc_bridge.py.md  matrix_auth_observer.py.md  media_observer.py.md  mjolnir.py.md  observability.py.md  pebble.py.md  promote_user_admin.md  redis_observer.py.md  register_user.md  reset_instance.md  s3_parameters.py.md  saml_observer.py.md  secret_storage.py.md  smtp_observer.py.md  user.py.md  workload.md
src/actions/: __init__.py  change_user_admin.py  promote_user_admin.py  register_user.py  reset_instance.py
src/auth/: __init__.py  mas.py
src/containers/: __init__.py  synapse.py
src/grafana_dashboards/: synapse.json  synapse_statistics.json
src/integrations/: __init__.py  database.py
src/jinja_templates/: main_location.conf.j2
src/prometheus_alert_rules/: synape.rule  synapse.rule
src/state/: __init__.py  charm_state.py  mas.py  mjolnir.py  validate.py  validation.py
src/synapse/: .workload.py.swp  __init__.py  admin.py  api.py  workload.py  workload_configuration.py
synapse_rock/: rockcraft.yaml  start_custom.py
synapse_rock/attributemaps/: login_ubuntu.py  u1staging.py
synapse_rock/etc/: nginx.conf
synapse_rock/patches/: start.patch
synapse_rock/scripts/: run_cron.py
templates/: abuse_report_location.conf.j2  irc_bridge_production.yaml  main_location.conf.j2  mas_config.yaml.j2  mjolnir_production.yaml  worker.yaml
terraform/: main.tf  variables.tf
tests/: conftest.py  constants.py
tests/integration/: any_charm.py  conftest.py  helpers.py  test_actions.py  test_charm.py  test_cos.py  test_cos_integration.py  test_database.py  test_matrix_auth.py  test_mjolnir.py  test_nginx.py  test_redis.py  test_refresh.py  test_s3.py  test_scaling.py
tests/unit/: conftest.py  test_action.py  test_admin_access_token.py  test_admin_create_user.py  test_anonymize_user_action.py  test_backup.py  test_backup_observer.py  test_charm.py  test_charm_scaling.py  test_charm_state.py  test_core.py  test_database.py  test_database_client.py  test_exceptions.py  test_irc_bridge.py  test_mas.py  test_matrix_auth_integration.py  test_matrix_plugins_lib.py  test_media_observer.py  test_mjolnir.py  (+8 more)
(+9 files in other folders)
